--- a/src/general.scss
+++ b/src/general.scss
@@ -1,8 +1,13 @@
 $white-1: #FFFFFF;
 $white-2: #F0F4F8;
+
 $black-1: #000000;
+
+$turquoise-1: #8FB1C7;
+$turquoise-2: #6b8595;
+$turquoise-3: #485964;
+
 $blue-1: #0000DE;
-$blue-2: #6E9BB8;
 $blue-3: #355DFB;
 
 @mixin container {
