--- a/src/components/SurfaceBlock/SurfaceSlider/SliderElement/SliderElement.module.scss
+++ b/src/components/SurfaceBlock/SurfaceSlider/SliderElement/SliderElement.module.scss
@@ -38,12 +38,12 @@
 }
 
 .image {
-  width: 400px;
-  height: 400px;
+  max-width: 400px;
+  max-height: 400px;
   object-fit: cover;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 900px) {
   .item {
     flex-direction: column;
     gap: 25px;
@@ -53,8 +53,13 @@
     text-align: center;
   }
 
-  .image {
-    width: 100%;
-    height: 100%;
+  .title {
+    font-size: 36px;
+  }
+}
+
+@media (max-width: 375px) {
+  .title {
+    font-size: 28px;
   }
 }
