--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import "~normalize.css";
+@import "general";
 @import '@fontsource/roboto/300.css';
 @import '@fontsource/roboto/400.css';
 @import '@fontsource/roboto/500.css';
@@ -21,6 +22,16 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
+
+  &::-webkit-scrollbar {
+    width: 7px;
+  }
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: $blue-2;
+  }
 }
 
 #root {
