--- a/src/general.scss
+++ b/src/general.scss
@@ -4,8 +4,10 @@ $white-2: #F0F4F8;
 $black-1: #000000;
 
 $turquoise-1: #8FB1C7;
-$turquoise-2: #6b8595;
+$turquoise-2: #6B8595;
 $turquoise-3: #485964;
+$turquoise-4: #79A6C3;
+$turquoise-5: #6E9BB8;
 
 $blue-1: #0000DE;
 $blue-2: #92D3F5;
