--- a/src/components/SurfaceBlock/Header/Bar/DrawerComponent/DrawerComponent.module.scss
+++ b/src/components/SurfaceBlock/Header/Bar/DrawerComponent/DrawerComponent.module.scss
@@ -1,5 +1,14 @@
 @import "src/general";
 
+.wrapper {
+  background-color: transparent;
+  backdrop-filter: blur(10px);
+
+  div:nth-child(3) {
+    background-color: rgba(255, 255, 255, 0.75);
+  }
+}
+
 .button {
   min-width: 36px !important;
   padding: 8px !important;
