--- a/src/general.scss
+++ b/src/general.scss
@@ -1,5 +1,8 @@
 $white-1: #FFFFFF;
 $white-2: #F0F4F8;
+$white-3: #F5F5F5;
+$white-4: #DFDFDF;
+$white-5: #E9E9E9;
 
 $black-1: #000000;
 $black-2: #333333;
@@ -21,8 +24,20 @@ $blue-3: #355DFB;
   padding: 0 25px;
 }
 
+@mixin mini-container {
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
 @mixin shadow {
   -webkit-box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
   -moz-box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
   box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
+}
+
+@mixin title($font-size) {
+  font-size: $font-size;
+  font-weight: 300;
+  color: $black-2;
 }
