--- a/src/general.scss
+++ b/src/general.scss
@@ -40,4 +40,10 @@ $blue-3: #355DFB;
   font-size: $font-size;
   font-weight: 300;
   color: $black-2;
+
+  @media (max-width: 768px) {
+    & {
+      font-size: 1.5rem;
+    }
+  }
 }
