--- a/src/general.scss
+++ b/src/general.scss
@@ -31,9 +31,9 @@ $blue-3: #355DFB;
 }
 
 @mixin shadow {
-  -webkit-box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
-  -moz-box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
-  box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2);
+  -webkit-box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2) !important;
+  -moz-box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2) !important;
+  box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2) !important;
 }
 
 @mixin title($font-size) {
