--- a/src/components/MainBlock/About/WorkingMode/WorkingMode.module.scss
+++ b/src/components/MainBlock/About/WorkingMode/WorkingMode.module.scss
@@ -31,3 +31,13 @@
     }
   }
 }
+
+@media (max-width: 992px) {
+  tr {
+    background-color: $white-3 !important;
+
+    &:nth-child(even) {
+      background-color: $white-4 !important;
+    }
+  }
+}
