--- a/src/general.scss
+++ b/src/general.scss
@@ -3,19 +3,17 @@ $white-2: #F0F4F8;
 $white-3: #F5F5F5;
 $white-4: #DFDFDF;
 $white-5: #E9E9E9;
-
 $black-1: #000000;
 $black-2: #333333;
-
 $turquoise-1: #8FB1C7;
 $turquoise-2: #6B8595;
 $turquoise-3: #485964;
 $turquoise-4: #79A6C3;
 $turquoise-5: #6E9BB8;
-
 $blue-1: #0000DE;
 $blue-2: #92D3F5;
 $blue-3: #355DFB;
+$shadow-color: rgba(34, 60, 80, 0.2);
 
 @mixin container {
   max-width: 1330px;
@@ -31,9 +29,9 @@ $blue-3: #355DFB;
 }
 
 @mixin shadow {
-  -webkit-box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2) !important;
-  -moz-box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2) !important;
-  box-shadow: 0 5px 10px 2px rgba(34, 60, 80, 0.2) !important;
+  -webkit-box-shadow: 0 5px 10px 2px $shadow-color !important;
+  -moz-box-shadow: 0 5px 10px 2px $shadow-color !important;
+  box-shadow: 0 5px 10px 2px $shadow-color !important;
 }
 
 @mixin title($font-size) {
