--- a/src/components/CommonComponents/Logo/Logo.module.scss
+++ b/src/components/CommonComponents/Logo/Logo.module.scss
@@ -1,10 +1,9 @@
-@import "../../../general";
+@import "src/general";
 
 .link {
   display: flex;
   align-items: center;
   text-decoration: none;
-  outline: none;
   color: $black-1;
   gap: 10px;
 
