--- a/src/components/Footer/SideInformation/SideInformation.module.scss
+++ b/src/components/Footer/SideInformation/SideInformation.module.scss
@@ -7,12 +7,12 @@
   color: $turquoise-5;
 }
 
-.title {
-  font-size: 14px;
-  font-weight: 700;
-}
-
+.title,
 .text {
   font-size: 14px;
   font-weight: 400;
+}
+
+.title {
+  font-weight: 700;
 }
