--- a/src/components/MainBlock/OfficialPage/Services/Services.module.scss
+++ b/src/components/MainBlock/OfficialPage/Services/Services.module.scss
@@ -10,6 +10,10 @@
   @include title(36px);
 }
 
+.underlining {
+  @include underlining;
+}
+
 .container {
   display: flex;
   align-items: flex-end;
