--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,10 +1,10 @@
 @import "src/general";
 
-.surface {
+.wrapper {
   background-color: $white-2;
 }
 
-.wrapper {
+.container {
   @include container;
   padding: 75px 25px 30px 25px;
   display: flex;
