--- a/src/components/OfficialPage/Services/Services.module.scss
+++ b/src/components/OfficialPage/Services/Services.module.scss
@@ -31,10 +31,11 @@
   flex-direction: column;
   gap: 25px;
   max-width: 200px;
-  max-height: 250px;
+  min-height: 250px;
+  transition: .125s ease;
 
   &:hover {
-    min-height: 250px;
+    transform: scale(1.1);
   }
   &:active {
     .icon {
@@ -76,6 +77,9 @@
   .item {
     min-height: 250px;
 
+    &:hover {
+      transform: scale(1);
+    }
     h3 {
       font-size: 16px;
     }
