--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -5,7 +5,7 @@
   background-color: $white-2;
 }
 
-.footer {
+.container {
   @include container;
   padding: 75px 25px 15px 25px;
   display: flex;
