--- a/src/components/PageNotFound/PageNotFound.module.scss
+++ b/src/components/PageNotFound/PageNotFound.module.scss
@@ -6,11 +6,18 @@
   align-items: center;
   justify-content: center;
   gap: 25px;
+  text-align: center;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 .title {
   max-width: 800px;
-  text-align: center;
   font-weight: 500;
   color: $black-1;
+}
+
+.description {
+  color: $black-2;
+  font-size: 16px;
 }
