--- a/src/components/Official/Services/Services.module.scss
+++ b/src/components/Official/Services/Services.module.scss
@@ -58,7 +58,7 @@
   }
 }
 
-.link {
+.last {
   gap: 10px;
   background-color: $blue-3;
   min-height: 250px;
@@ -85,7 +85,23 @@
     }
   }
 
-  .link {
+  .last {
     width: 200px;
+  }
+}
+
+@media (max-width: 469px) {
+  .item {
+    padding: 20px;
+    max-width: unset;
+    min-height: unset;
+  }
+
+  .icon {
+    display: none;
+  }
+
+  .last {
+    width: 100%;
   }
 }
