--- a/src/general.scss
+++ b/src/general.scss
@@ -36,6 +36,7 @@ $shadow-color: rgba(34, 60, 80, 0.2);
 
 @mixin title($font-size) {
   font-size: $font-size;
+  line-height: 36px;
   font-weight: 300;
   color: $black-2;
 
