--- a/src/pages/Interview/Interview.module.scss
+++ b/src/pages/Interview/Interview.module.scss
@@ -1,30 +1,16 @@
 @import "src/general";
 
-.wrapper {
+.information {
   display: flex;
   flex-direction: column;
-  gap: 50px;
-
-  div {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-
-  ul {
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-  }
+  gap: 10px;
 }
 
-.title {
-  @include title(36px);
-}
-
-.underlining {
-  @include underlining;
+.list {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 .text {
