--- a/src/components/CommonComponents/Wrapper/Wrapper.module.scss
+++ b/src/components/CommonComponents/Wrapper/Wrapper.module.scss
@@ -8,8 +8,7 @@
 
 .header {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
   gap: 25px;
 }
 
@@ -19,8 +18,10 @@
 
 .button {
   color: $blue-1 !important;
+  max-width: max-content;
   display: flex;
   gap: 10px;
+  padding: 10px !important;
 
   span {
     line-height: 20px;
