--- a/src/pages/ForEmployers/ForEmployers.module.scss
+++ b/src/pages/ForEmployers/ForEmployers.module.scss
@@ -1,1 +1,19 @@
 @import "src/general";
+
+.list {
+  padding-left: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.link {
+  color: $blue-3;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
