--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -6,7 +6,7 @@
 }
 
 .container {
-  @include container;
+  @include large-container;
   padding: 75px 25px 15px 25px;
   display: flex;
   flex-direction: column;
