--- a/src/pages/SingleArticle/SingleArticle.module.scss
+++ b/src/pages/SingleArticle/SingleArticle.module.scss
@@ -1,1 +1,32 @@
-@import "../../general";
+@import "src/general";
+
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
+.date {
+  font-size: 16px;
+  font-weight: 500;
+  color: $black-2;
+}
+
+.body {
+  line-height: 32px;
+  text-indent: 24px;
+  font-size: 18px;
+
+  &::first-letter {
+    font-size: 24px;
+    font-weight: 500;
+  }
+}
+
+.cover {
+  max-width: 750px;
+  width: 100%;
+  margin: 0 auto;
+  border-radius: 30px;
+  object-fit: cover;
+}
