--- a/src/pages/SingleArticle/SingleArticle.module.scss
+++ b/src/pages/SingleArticle/SingleArticle.module.scss
@@ -1,9 +1,23 @@
 @import "src/general";
 
-.container {
+.wrapper {
+  @include small-container;
   display: flex;
   flex-direction: column;
   gap: 25px;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 50px;
+}
+
+.time {
+  display: flex;
+  align-items: flex-end;
+  gap: 5px;
 }
 
 .date {
@@ -12,10 +26,16 @@
   color: $black-2;
 }
 
+.button {
+  background-color: $blue-3 !important;
+  display: inline !important;
+}
+
 .body {
   line-height: 32px;
   text-indent: 24px;
   font-size: 18px;
+  text-align: justify;
 
   &::first-letter {
     font-size: 24px;
