--- a/src/components/SearchField/SearchField.module.scss
+++ b/src/components/SearchField/SearchField.module.scss
@@ -7,6 +7,7 @@
   border-radius: 5px;
   padding: 10px;
   width: 100%;
+  background-color: transparent;
 
   &:focus {
     border: 1px solid $black-1;
