--- a/src/pages/Feed/Feed.module.scss
+++ b/src/pages/Feed/Feed.module.scss
@@ -6,3 +6,14 @@
   flex-direction: column;
   gap: 25px;
 }
+
+.empty {
+  font-size: 20px;
+  font-weight: 500;
+  color: $black-2;
+  
+  span {
+    font-style: italic;
+    color: $blue-3;
+  }
+}
