--- a/src/pages/Feed/Feed.module.scss
+++ b/src/pages/Feed/Feed.module.scss
@@ -1,10 +1,10 @@
 @import "src/general";
 
 .wrapper {
-  @include small-container;
+  @include medium-container;
   display: flex;
   flex-direction: column;
-  gap: 25px;
+  gap: 50px;
 }
 
 .empty {
