--- a/src/components/SearchField/SearchField.module.scss
+++ b/src/components/SearchField/SearchField.module.scss
@@ -5,7 +5,7 @@
   border: 1px solid $black-2;
   font-size: 16px;
   border-radius: 5px;
-  padding: 10px;
+  padding: 15px 20px;
   width: 100%;
   background-color: transparent;
 
