--- a/src/components/Footer/BlockGrid/Mailing/Mailing.module.scss
+++ b/src/components/Footer/BlockGrid/Mailing/Mailing.module.scss
@@ -44,7 +44,7 @@
   border: unset;
   font-size: 16px;
   border-radius: 5px;
-  padding: 10px;
+  padding: 20px 15px;
   width: 100%;
   background-color: $white-1;
 }
