--- a/src/pages/AdminPanel/AdminPanel.module.scss
+++ b/src/pages/AdminPanel/AdminPanel.module.scss
@@ -1,1 +1,21 @@
 @import "src/general";
+
+.wrapper {
+  margin: 25px auto;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  text-align: center;
+  max-width: 750px;
+}
+
+.title {
+  font-size: 40px;
+  font-weight: 700;
+  color: $blue-1;
+  margin: 0;
+}
+
+.underlining {
+  @include underlining;
+}
