--- a/src/pages/AdminPanel/AdminPanel.module.scss
+++ b/src/pages/AdminPanel/AdminPanel.module.scss
@@ -5,15 +5,22 @@
   display: flex;
   flex-direction: column;
   gap: 25px;
-  text-align: center;
+}
+
+.addendum {
   max-width: 750px;
 }
 
 .title {
-  font-size: 40px;
+  font-size: 32px;
   font-weight: 700;
   color: $blue-1;
   margin: 0;
+  text-align: center;
+}
+
+.subtitle {
+  font-size: 28px;
 }
 
 .underlining {
