--- a/src/pages/SingleArticle/SingleArticle.module.scss
+++ b/src/pages/SingleArticle/SingleArticle.module.scss
@@ -1,7 +1,7 @@
 @import "src/general";
 
 .wrapper {
-  @include medium-container;
+  @include small-container;
   display: flex;
   flex-direction: column;
   gap: 25px;
